Menu setupp og Frosida

--- a/index.html
+++ b/index.html
@@ -9,6 +9,10 @@ title: Home
     <title>{{ page.title }}</title>
   </head>
   <body>
-    <h1>{{ "Hello World!" | downcase }}</h1>
+    <h1 class='mid'>Welcome to :</h1>
+    <div class='mid'>
+      <img src='/assets/img/angular.svg'>
+    </div>
+    <h3 class='mid'>The best concert</h3>
   </body>
 </html>
