--- a/staff.html
+++ b/staff.html
@@ -1,7 +1,7 @@
 ---
 layout: default
 ---
-<h1>Staff</h1>
+<h1 class='mid'>Staff</h1>
 
 <ul>
   {% for author in site.authors %}
@@ -12,11 +12,11 @@ layout: default
     </li>
   {% endfor %}
 </ul>
-<ul>
+<ul class='mid'>
   <li>
     <h2><a href="/authors/jill.html">Ariana Grande</a></h2>
     <h3>Singer</h3>
-    
+    <img src='/assets/img/ariana-grande-photo-u171.webp'>
     <p><p>Ariana Grande-Butera (/ˌɑːriˈɑːnə ˈɡrɑːndeɪ/; born June 26, 1993) is an American singer, songwriter, and actress.</p>
     </p>
   </li>
@@ -24,31 +24,37 @@ layout: default
   <li>
     <h2><a href="/authors/ted.html">Billie Eilish</a></h2>
     <h3>Singer</h3>
+    <img src='/assets/img/billie-eilish-photo-u1.webp'>
     <p><p>Billie Eilish Pirate Baird O'Connell (/ˈaɪlɪʃ/; born December 18, 2001) is an American singer and songwriter.</p>
     </p>
   </li>
   <li>
     <h2><a href="/authors/Shawn.html">Shawn Mendes</a></h2>
     <h3>Singer</h3>
+    <img src='/assets/img/shawn-mendes-photo-u15.webp'>
     <p><p>Shawn Peter Raul Mendes (/ˈmɛndɛz/; born August 8, 1998) is a Canadian singer, songwriter, and model.</p>
     </p>
   </li>
   <li>
     <h2><a href="/authors/Grace.html">Grace VanderWaal</a></h2>
     <h3>Singer</h3>
+    <img src='/assets/img/grace-vanderwaal-photo-u5.webp'>
     <p><p>Grace Avery VanderWaal (born January 15, 2004) is an American singer-songwriter from Suffern, NY.</p>
     </p>
   </li>
   <li>
     <h2><a href="/authors/Ed.html">Edward Sheeran</a></h2>
     <h3>Singer</h3>
+    <img src='/assets/img/ed-sheeran-photo-u17.webp'>
     <p><p>Edward Christopher Sheeran, MBE (/ˈʃɪərən/; born 17 February 1991) is an English singer, songwriter, guitarist, record producer, and actor.</p>
     </p>
   </li>
   <li>
     <h2><a href="/authors/Taylor.html">Taylor Alison</a></h2>
     <h3>Singer</h3>
+    <img src='/assets/img/taylor-swift-recording-artists-and-groups-photo-u233.webp' style="width:120px;height:120px;">
     <p><p>Taylor Alison Swift (born December 13, 1989) is an American singer-songwriter.</p>
     </p>
   </li>
+</ul>
 </ul>
