--- a/about.html
+++ b/about.html
@@ -14,63 +14,41 @@ title: About
     <table class='midja'>
         <thead>
           <tr>
-            <th scope="col" colspan="2">Item</th>
-            <th scope="col">Qty</th>
-            <th scope="col">Price</th>
+            <th scope="col">Dagsetning</th>
+            <th scope="col">Lýsing</th>
+            <th scope="col">Hvaða miða þarft þú</th>
           </tr>
         </thead>
         <tbody class='bakgrat'>
           <tr>
             <td class='bakgrat'>
-              <strong class="book-title">Don&#8217;t Make Me Think</strong>
-              <span class="text-offset">by Steve Krug</span>
+              <strong class="book-title">17/09/19</strong>
             </td>
-            <td class="item-stock hvit">In Stock</td>
-            <td class="item-qty hvit">1</td>
-            <td class="item-price hvit">$30.02</td>
+            <td class="item-qty hvit">-----Filler  -----</td>
+            <td class="item-price hvit">Venjulegt/Vip/Deluxe</td>
           </tr>
           <tr>
             <td>
-              <strong class="book-title">A Project Guide to UX Design</strong>
-              <span class="text-offset">by Russ Unger &#38; Carolyn Chandler</span>
+              <strong class="book-title">18/0919</strong>
             </td>
-            <td class="item-stock svart">In Stock</td>
-            <td class="item-qty svart">2</td>
-            <td class="item-price svart">$52.94 <span class="text-offset item-multiple">$26.47 &#215; 2</span></td>
+            <td class="item-qty svart">-----Filler  -----</td>
+            <td class="item-price svart">Venjulegt/Vip/Deluxe</td>
           </tr>
           <tr>
             <td class='bakgrat'>
-              <strong class="book-title">Introducing HTML5</strong>
-              <span class="text-offset">by Bruce Lawson &#38; Remy Sharp</span>
+              <strong class="book-title">19/09/19</strong>
             </td>
-            <td class="item-stock hvit">Out of Stock</td>
-            <td class="item-qty hvit">1</td>
-            <td class="item-price hvit">$22.23</td>
+            <td class="item-qty hvit">-----Filler  -----</td>
+            <td class="item-price hvit">Vip/Deluxe</td>
           </tr>
           <tr>
             <td>
-              <strong class="book-title">Bulletproof Web Design</strong>
-              <span class="text-offset">by Dan Cederholm</span>
+              <strong class="book-title">20/09/19</strong>
             </td>
-            <td class="item-stock svart">In Stock</td>
-            <td class="item-qty svart">1</td>
-            <td class="item-price svart">$30.17</td>
+            <td class="item-qty svart">-----Filler  -----</td>
+            <td class="item-price svart">Deluxe</td>
           </tr>
         </tbody>
-        <tfoot>
-          <tr class="text-offset bakhvit">
-            <td colspan="3">Subtotal</td>
-            <td>$135.36</td>
-          </tr>
-          <tr class="text-offset bakhvit">
-            <td colspan="3">Tax</td>
-            <td>$13.54</td>
-          </tr>
-          <tr>
-            <td colspan="3">Total</td>
-            <td>$148.90</td>
-          </tr>
-        </tfoot>
     </table>
   </a>
 </div>
