--- a/about.html
+++ b/about.html
@@ -4,7 +4,7 @@ title: About
 ---
 <br> 
 <br>
-<div class='mid'>This page tells you a little bit about the company and the date and time of the concert</div>
+<div class='mid'>This page tells you about the date and time of the concert</div>
 <br> 
 <br>
 <br>
@@ -24,28 +24,28 @@ title: About
             <td class='bakgrat'>
               <strong class="book-title">17/09/19</strong>
             </td>
-            <td class="item-qty hvit">-----Filler  -----</td>
+            <td class="item-qty hvit">-----Filler1  -----</td>
             <td class="item-price hvit">Venjulegt/Vip/Deluxe</td>
           </tr>
           <tr>
             <td>
               <strong class="book-title">18/0919</strong>
             </td>
-            <td class="item-qty svart">-----Filler  -----</td>
+            <td class="item-qty svart">-----Filler2  -----</td>
             <td class="item-price svart">Venjulegt/Vip/Deluxe</td>
           </tr>
           <tr>
             <td class='bakgrat'>
               <strong class="book-title">19/09/19</strong>
             </td>
-            <td class="item-qty hvit">-----Filler  -----</td>
+            <td class="item-qty hvit">-----Filler3  -----</td>
             <td class="item-price hvit">Vip/Deluxe</td>
           </tr>
           <tr>
             <td>
               <strong class="book-title">20/09/19</strong>
             </td>
-            <td class="item-qty svart">-----Filler  -----</td>
+            <td class="item-qty svart">-----Filler4  -----</td>
             <td class="item-price svart">Deluxe</td>
           </tr>
         </tbody>
