--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@ title: Home
 
 <h1 class='mid'>Welcome to :</h1>
 <div class='mid'>
-  <img src='/assets/img/angular.svg'>
+  <img src='assets/img/angular.svg'>
 </div>
 <h3 class='mid'>The best concert</h3>
 <h1>C</h1>
