--- a/about.html
+++ b/about.html
@@ -14,9 +14,9 @@ title: About
     <table class='midja'>
         <thead>
           <tr>
-            <th scope="col">Dagsetning</th>
-            <th scope="col">Lýsing</th>
-            <th scope="col">Hvaða miða þarft þú</th>
+            <th scope="col">Date</th>
+            <th scope="col">About the concert</th>
+            <th scope="col">What ticket do you want?</th>
           </tr>
         </thead>
         <tbody class='bakgrat'>
