--- a/about.html
+++ b/about.html
@@ -16,7 +16,7 @@ title: About
           <tr>
             <th scope="col">Date</th>
             <th scope="col">About the concert</th>
-            <th scope="col">What ticket do you want?</th>
+            <th scope="col">Ticket variety</th>
           </tr>
         </thead>
         <tbody class='bakgrat'>
@@ -24,28 +24,28 @@ title: About
             <td class='bakgrat'>
               <strong class="book-title">17/09/20</strong>
             </td>
-            <td class="item-qty hvit">-----Filler1  -----</td>
-            <td class="item-price hvit">Venjulegt/Vip/Deluxe</td>
+            <td class="item-qty hvit">THE GREATEST CONCERT EVER!</td>
+            <td class="item-price hvit">Mediocre/VIP/Deluxe</td>
           </tr>
           <tr>
             <td>
               <strong class="book-title">18/09/20</strong>
             </td>
-            <td class="item-qty svart">-----Filler2  -----</td>
-            <td class="item-price svart">Venjulegt/Vip/Deluxe</td>
+            <td class="item-qty svart">THE GREATEST CONCERT EVER!</td>
+            <td class="item-price svart">Mediocre/VIP/Deluxe</td>
           </tr>
           <tr>
             <td class='bakgrat'>
               <strong class="book-title">19/09/20</strong>
             </td>
-            <td class="item-qty hvit">-----Filler3  -----</td>
-            <td class="item-price hvit">Vip/Deluxe</td>
+            <td class="item-qty hvit">THE GREATEST CONCERT EVER!</td>
+            <td class="item-price hvit">VIP/Deluxe</td>
           </tr>
           <tr>
             <td>
               <strong class="book-title">20/09/20</strong>
             </td>
-            <td class="item-qty svart">-----Filler4  -----</td>
+            <td class="item-qty svart">THE GREATEST CONCERT EVER!</td>
             <td class="item-price svart">Deluxe</td>
           </tr>
         </tbody>
