--- a/about.html
+++ b/about.html
@@ -52,6 +52,11 @@ title: About
     </table>
   </a>
 </div>
-
+<div class="fyrirtaeki">
+  <p class="pfyrirtaeki">Angular is a platform that makes it easy to build applications with the web.<br>
+    Angular combines declarative templates, dependency injection, end to end tooling,<br>
+    and integrated best practices to solve development challenges.<br>
+    Angular empowers developers to build applications that live on the web, mobile, or the desktop.</p>
+</div>
 
 
