--- a/about.html
+++ b/about.html
@@ -25,14 +25,14 @@ title: About
               <strong class="book-title">17/09/20</strong>
             </td>
             <td class="item-qty hvit">THE GREATEST CONCERT EVER!</td>
-            <td class="item-price hvit">Mediocre/VIP/Deluxe</td>
+            <td class="item-price hvit">Normal/VIP/Deluxe</td>
           </tr>
           <tr>
             <td>
               <strong class="book-title">18/09/20</strong>
             </td>
             <td class="item-qty svart">THE GREATEST CONCERT EVER!</td>
-            <td class="item-price svart">Mediocre/VIP/Deluxe</td>
+            <td class="item-price svart">Normal/VIP/Deluxe</td>
           </tr>
           <tr>
             <td class='bakgrat'>
