--- a/index.html
+++ b/index.html
@@ -8,3 +8,8 @@ title: Home
   <img src='assets/img/angular.svg'>
 </div>
 <h3 class='mid'>The best concert</h3>
+<div class="aug">
+  <div class="animation">
+      <img src="/assets/img/">
+  </div>
+</div>
