--- a/index.html
+++ b/index.html
@@ -13,3 +13,7 @@ title: Home
       <img src="/assets/img/">
   </div>
 </div>
+
+<div class="animation">
+    <img src="/assets/image/ricardo.jpg">
+</div>
