adrar_animation_breytingar

--- a/index.html
+++ b/index.html
@@ -10,6 +10,6 @@ title: Home
 <h3 class='mid'>The best concert</h3>
 <div class="aug">
   <div class="animation">
-      <img src="/assets/img/angular-icon.svg">
+      <img src="assets/img/angular-icon.svg">
   </div>
 </div>
