--- a/index.html
+++ b/index.html
@@ -2,12 +2,13 @@
 layout: default
 title: Home
 ---
-
-<h1 class='mid'>Welcome to :</h1>
-<div class='mid'>
+<head class="vin">
+<h1>Welcome to :</h1>
+<div>
   <img src='assets/img/angular.svg'>
 </div>
-<h3 class='mid'>The best concert</h3>
+<h3>The best concert</h3>
+</head>
 <div class="aug">
   <div class="animation">
       <img src="assets/img/angular-icon.svg">
