--- a/index.html
+++ b/index.html
@@ -3,11 +3,11 @@ layout: default
 title: Home
 ---
 <head class="vin">
-<h1 class="mid">Welcome to :</h1>
+<h1>Welcome to :</h1>
 <div>
   <img src='assets/img/angular.svg'>
 </div>
-<h3 class="mid">The best concert</h3>
+<h3>The best concert</h3>
 </head>
 <div class="aug">
   <div class="animation">
