--- a/about.html
+++ b/about.html
@@ -24,28 +24,28 @@ title: About
             <td class='bakgrat'>
               <strong class="book-title">17/09/20</strong>
             </td>
-            <td class="item-qty hvit">THE GREATEST CONCERT EVER!</td>
+            <td class="item-qty hvit">The child prodigy Grace Avery VanderWaal sings the songs listed on her page with style</td>
             <td class="item-price hvit">Normal/VIP/Deluxe</td>
           </tr>
           <tr>
             <td>
               <strong class="book-title">18/09/20</strong>
             </td>
-            <td class="item-qty svart">THE GREATEST CONCERT EVER!</td>
+            <td class="item-qty svart">The gracefull singer Shawn Mendes sings a few of his songs that you can see listed on his page</td>
             <td class="item-price svart">Normal/VIP/Deluxe</td>
           </tr>
           <tr>
             <td class='bakgrat'>
               <strong class="book-title">19/09/20</strong>
             </td>
-            <td class="item-qty hvit">THE GREATEST CONCERT EVER!</td>
+            <td class="item-qty hvit">Billy Eilish the rising star will sing her songs exclusively for VIP and deluxe guests</td>
             <td class="item-price hvit">VIP/Deluxe</td>
           </tr>
           <tr>
             <td>
               <strong class="book-title">20/09/20</strong>
             </td>
-            <td class="item-qty svart">THE GREATEST CONCERT EVER!</td>
+            <td class="item-qty svart">The most famous singer right now Ariana Grande will sing some of her biggest hits, only for deluxe guests</td>
             <td class="item-price svart">Deluxe</td>
           </tr>
         </tbody>
