upplysingasidu_og_css_breytingar

--- a/about.html
+++ b/about.html
@@ -8,10 +8,9 @@ title: About
 <br> 
 <br>
 <br>
-<div class='stuff'>
-  <div class='vinstri'></div>
+<div>
   <a>
-    <table class='midja'>
+    <table>
         <thead>
           <tr>
             <th scope="col">Date</th>
