--- a/staff.html
+++ b/staff.html
@@ -16,7 +16,7 @@ layout: default
     <h2><a href="https://huginn-muninn.github.io/HuginnMuninn.github.io/authors/jill.html">Ariana Grande</a></h2>
     <h3>Singer</h3>
     <img src='assets/img/ariana-grande-photo-u171.webp'>
-    <p><p>Ariana Grande-Butera (/ˌɑːriˈɑːnə ˈɡrɑːndeɪ/; born June 26, 1993) is an American singer, songwriter, and actress.</p>
+    <p><p>Ariana Grande-Butera (born June 26, 1993) is an American singer, songwriter, and actress.</p>
     </p>
   </li>
 
@@ -24,14 +24,14 @@ layout: default
     <h2><a href="https://huginn-muninn.github.io/HuginnMuninn.github.io/authors/ted.html">Billie Eilish</a></h2>
     <h3>Singer</h3>
     <img src='assets/img/billie-eilish-photo-u1.webp'>
-    <p><p>Billie Eilish Pirate Baird O'Connell (/ˈaɪlɪʃ/; born December 18, 2001) is an American singer and songwriter.</p>
+    <p><p>Billie Eilish Pirate Baird O'Connell (born December 18, 2001) is an American singer and songwriter.</p>
     </p>
   </li>
   <li>
     <h2><a href="https://huginn-muninn.github.io/HuginnMuninn.github.io/authors/Shawn.html">Shawn Mendes</a></h2>
     <h3>Singer</h3>
     <img src='assets/img/shawn-mendes-photo-u15.webp'>
-    <p><p>Shawn Peter Raul Mendes (/ˈmɛndɛz/; born August 8, 1998) is a Canadian singer, songwriter, and model.</p>
+    <p><p>Shawn Peter Raul Mendes (born August 8, 1998) is a Canadian singer, songwriter, and model.</p>
     </p>
   </li>
   <li>
